--- a/flavors/midnight-catppuccin-mocha.theme.css
+++ b/flavors/midnight-catppuccin-mocha.theme.css
@@ -20,7 +20,7 @@
 	--font: 'figtree';
 
 	/* top left corner text */
-	--corner-text: 'Catppuccin';
+	--corner-text: 'cooper';
 
 	/* color of status indicators and window controls */
 	--online-indicator: #a6e3a1; /* change to #23a55a for default green */
@@ -75,7 +75,7 @@
 	/* direct messages moon icon */
 	/* change to block to show, none to hide */
 	--discord-icon: none; /* discord icon */
-	--moon-icon: none; /* moon icon */
+	--moon-icon: block; /* moon icon */
 	--moon-icon-url: none; /* custom icon url */
 	--moon-icon-size: auto;
 
@@ -87,8 +87,10 @@
 }
 
 /* catppuccin icon */
+/*
 .childWrapper_a6ce15:has(> svg:not(.favoriteIcon_adf80e)) {
 	background: url('https://raw.githubusercontent.com/catppuccin/catppuccin/main/assets/logos/exports/1544x1544_circle.png');
 	background-color: transparent !important;
 	background-size: cover;
 }
+*/
